--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div id="app"></div>
   <!-- React Script -->
-  <script src="client.min.js"></script>
+  <script src="js/client.min.js"></script>
 
 </body>
 </html>
